Thu Jul 20 11:07:00 BST 2000 Olly Betts

	* omega/htmlparse.cc: force parameter names to lower case

Thu Jul 20 10:41:00 BST 2000 Olly Betts

	* Correct fix for missing YACC

Mon Jul 17 13:21:28 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix Automake rule for building .yy sources, by defining
	  YACC=$BISON (with a flag to output to the expected place).

	* Fix a typo in omega.cc

Sun Jul 16 15:13:00 BST 2000 Olly Betts

	* omega: no_stem test was reversed

Sun Jul 16 11:39:00 BST 2000 Olly Betts

	* omindex: adding indexing of PostScript documents; put mimetype in
	  a field and add a boolean tag; treat .shtml as text/html; added
	  crude command line processing

Sat Jul 15 19:57:00 BST 2000 Olly Betts

	* omindex: added META tag handling for HTML

Sat Jul 15 19:22:00 BST 2000 Olly Betts

	* omindex: added parsers for text/plain and text/pdf

Sat Jul 15 18:23:00 BST 2000 Olly Betts

	* omega: hooked in parsequerytest to `make check'; `size_t' now
	  means the same as `size-t' and `"size t"'; tweaked templates/query
	  to improve output when there's no search

Sat Jul 15 17:59:00 BST 2000 Olly Betts

	* omega: added tests for QueryParser (not yet hooked into make check);
	  improved QueryParser to understand `gtk+', `gnome--', etc as terms;

	* omindex: index `gtk+', `gnome--', etc as terms

Sat Jul 15 15:21:00 BST 2000 Olly Betts

	* omega: started to encapsulate query parser in QueryParser class

Fri Jul 14 16:55:00 BST 2000 Olly Betts

	* omega: query parser now treats `a-b' as `"a b"' while `a -b' means
	  `a NOT b'; fixed exception parsing empty query

Thu Jul 13 18:15:00 BST 2000 Olly Betts

	* omega: tweaked log format; don't calculate topdoc if we're only
	  going to throw away the answer; percentage scores now reach 100%
	  when all terms match top document; fixed record to field
	  splitting; created omega/README; miscellaneous fettling

Wed Jul 12 15:57:00 BST 2000 Olly Betts

	* omega: removed some unused system headers
